--- a/style.css
+++ b/style.css
@@ -94,17 +94,46 @@ nav .fa-solid{
         background-color: #FFF1E1;
         padding: 3%;
     }
-
+    h2{
+        font-size: 36px;
+        font-weight: 600;
+    }
+    .course-col{
+        flex-basis:31%;
+        background:#f0d5d5;
+        border-radius:10px;
+        margin-bottom:5%;
+        padding:20px 12px;
+        box-sizing:border-box;
+        transition:0.5s;
+    }
     .pc-card {
-        width: 300px;
+        width: 250px;
         border-radius: 24px;
         flex-direction: column;
         justify-content: space-between;
         background-color: white;
 
         .pc-headline {
-            font-size: 35px;
+            font-size: 20px;
             padding: 10%;
+        }
+        .svn-btn{
+            display:inline-block;
+            text-decoration:none;
+            color:#f44336;
+            border:1px solid #fff;
+            padding:10px 34px;
+            font-size:13px;
+            background:transparent;
+            position:relative;
+            cursor:pointer;
+        }
+        .svn-btn:hover{
+            border:1px solid #f44336;
+            background:#fff;
+            transition:1s;
+            color:#f44336;
         }
 
         .flex {
@@ -113,17 +142,16 @@ nav .fa-solid{
             padding: 6%;
 
             button {
-                background-color: #0C9F85;
-                color: white;
+                /* background-color: #0C9F85; */
+                color: black;
                 padding: 5% 15%;
                 border-radius: 12px;
-                font-size: 20px;
             }
         }
 
         .price {
             font-size: 30px;
-            color: #0C9F85;
+            color: black;
         }
     }
 
@@ -146,6 +174,7 @@ nav .fa-solid{
 .flexx {
     display: flex;
 }
+
 
 @media(max-width:700px){
     /*whatever code you write it will be applicable to the size </= 700px*/
@@ -185,6 +214,9 @@ nav .fa-solid{
     margin:auto;
     text-align:center;
     padding-top:100px;
+}
+.pcourse{
+    flex-direction: row;
 }
 h1{
     font-size:36px;
